--- a/doc/userman/userman.tex
+++ b/doc/userman/userman.tex
@@ -182,9 +182,9 @@ depending on their original sources.
        {\sl Orientative package names} (check the package manager in your system):
       \begin{list}{\labelitemiii}{\leftmargin=1em}
       \itemsep 0cm
-      \item Ubuntu/Debian: {\tt libdb4.6 libdb4.6-dev libdb4.6++ libdb4.6++-dev}
-      \item OpenSuse/Fedora/Mandriva: {\tt libdb-4.6 libdb-4.6-devel libdb\_cxx-4.6}\\
-                                      {\tt libdb\_cxx-4.6-devel }
+      \item Ubuntu/Debian: {\tt libdb4.7 libdb4.7-dev libdb4.7++ libdb4.7++-dev}
+      \item OpenSuse/Fedora/Mandriva: {\tt libdb-4.7 libdb-4.7-devel libdb\_cxx-4.7}\\
+                                      {\tt libdb\_cxx-4.7-devel }
       \item Slackware: {\tt db4}
       \end{list}
 
@@ -195,7 +195,7 @@ depending on their original sources.
        {\sl Orientative package names} (check the package manager in your system):
       \begin{list}{\labelitemiii}{\leftmargin=1em}
        \itemsep 0cm
-       \item Ubuntu/Debian: {\tt libboost-dev libboost-filesystem libboost-graph}
+       \item Ubuntu/Debian: {\tt libboost-dev libboost-filesystem libboost-program-options}
        \item OpenSuse/Fedora/Mandriva: {\tt libboost-devel libboost }
        \item Slackware: {\tt boost }
        \end{list}
